test/programs/good/check-terms-precedence/case_followed_by_quantum_ctrl_gate_controlled_by_vars.lq
fun :: Bit
fun = case x of  
   a1 -> a2 
   b1 -> with [ q0, q1 ] ctrl [ @1, @1 ]

