test/programs/bad/function_has_exponential_args__IncorrectNumberOfFunctionArguments.lq
fun :: [Qbit] ** 3 -> Bit
fun q1 q2 q3 arg  = 1

main :: Bit
main = other
